--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -4,8 +4,20 @@ body {
 }
 
 .container {
-    height: 100%;
+    height: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.spinner {
+    width: 48px;
+}
+
+.little-down {
+    padding-top: 72px;
+}
+
+.little-space {
+    padding: 8px;
 }
